<resources>
    <string name="app_name">Team15</string>
    <string name="app_handle">\@Team15App</string>
    <string name="app_hashtag">#Team15</string>
    <string name="action_delete">Delete</string>
    <string name="action_about">About</string>
    <string name="action_save">Save</string>
    <string name="action_load">Lineup History</string>
    <string name="action_swap">Swap Player</string>
    <string name="version">Version</string>
    <string name="title_select_team_name">Select Team A</string>
    <string name="default_team_name_a">Team A</string>
    <string name="default_team_name_b">Team B</string>
    <string name="versus">vs. </string>
    <string name="title_fixture">Match</string>
    <string name="default_match_title">Match Info</string>
    <string name="default_match_info">Competition name and stage, time and date, venue etc.</string>
    <string name="default_team_name">Select Team</string>
    <string name="default_match_info_competition_title">Competition</string>
    <string name="default_match_info_competition_name">Enter Competition</string>
    <string name="default_match_info_venue_title">Venue</string>
    <string name="default_match_info_venue_name">Enter Venue</string>
    <string name="default_match_info_time_title">Date/Time</string>
    <string name="default_match_info_time_name">Enter Date/Time</string>
    <string name="default_edit_player_title">Edit Player</string>
    <string name="default_edit_player_instruction"> Swipe left or right to quickly change player</string>
    <string name="error_player_name_char_limit">Character limit reached!</string>
    <string name="error_player_number_in_use">Player number is already in use by</string>
    <string name="player_name_char_limit">20</string>
    <string name="close_title">Close?</string>
    <string name="close_message">Any unsaved changes to your team, player or venue information will be lost</string>
    <string name="reset_message">All team, player and venue information will be deleted</string>
    <string name="delete_title">Delete?</string>
    <string name="delete_message">All selected teams will be permanently deleted</string>
    <string name="set_match_details">Edit Match Info</string>
    <string name="ok">ok</string>
    <string name="cancel">cancel</string>
    <string name="share">Share Via</string>
    <string name="file_name_empty">Filename cannot be empty!</string>
    <string name="file_name_exists">Filename already exists!</string>
    <string name="permission_error_msg_external_storage">Not able to perform operation, external storage permission required</string>
    <string name="delete_permission_error_msg">Not able to delete screenshot(s)</string>
    <string name="delete_not_available">"No teams selected to delete!"</string>
    <string name="delete_all_success">"All teams have been deleted!"</string>
    <string name="create_new_team">Create new lineup</string>
    <string name="duplicate_a_team">Duplicate an existing lineup</string>
    <string name="select_team_to_duplicate">Duplicate</string>
    <string name="overwrite_file">Overwrite file if it exists</string>
    <string name="swap_name">Name</string>
    <string name="swap_number">Number</string>
    <string name="swap_name_and_number">Name and Number</string>
    <string name="goalkeeper">Keeper</string>
    <string name="outfielder">Outfielder</string>
    <string-array name="swap_options">
        <item>@string/swap_name</item>
        <item>@string/swap_number</item>
        <item>@string/swap_name_and_number</item>
    </string-array>
    <string-array name="team_positions">
        <item>@string/goalkeeper</item>
        <item>Left corner back</item>
        <item>Full back</item>
        <item>Right corner back</item>
        <item>Left half back</item>
        <item>Center back</item>
        <item>Right half back</item>
        <item>Midfield A</item>
        <item>Midfield B</item>
        <item>Left half forward</item>
        <item>Center forward</item>
        <item>Right half forward</item>
        <item>Left corner forward</item>
        <item>Full forward</item>
        <item>Right corner forward</item>
    </string-array>
    <string name="ballinameen_roscommon">Ballinameen</string>
    <string name="boyle_roscommon">Boyle</string>
    <string name="castlerea_roscommon">Castlerea</string>
    <string name="clann_na_ngael_roscommon">Clann na nGael</string>
    <string name="creggs_roscommon">Creggs</string>
    <string name="eire_og_roscommon">Eire Og</string>
    <string name="elphin_roscommon">Elphin</string>
    <string name="fuerty_roscommon">Fuerty</string>
    <string name="kilbride_roscommon">Kilbride</string>
    <string name="kilglass_gaels_roscommon">Kilglass Gaels</string>
    <string name="kilmore_roscommon">Kilmore</string>
    <string name="micheal_glaveys_roscommon">Michael Glaveys</string>
    <string name="oran_roscommon">Oran</string>
    <string name="padraig_pearses_roscommon">Padraig Pearses</string>
    <string name="roscommon_gaels_roscommon">Roscommon Gaels</string>
    <string name="shannon_gaels_roscommon">Shannon Gaels</string>
    <string name="st_aidans_roscommon">St Aidans</string>
    <string name="st_barrys_roscommon">St Barrys</string>
    <string name="st_brigids_roscommon">St Brigids</string>
    <string name="st_croans_roscommon">St Croans</string>
    <string name="st_dominics_roscommon">St Dominics</string>
    <string name="st_faithleachs_roscommon">St Faithleachs</string>
    <string name="st_josephs_roscommon">St Josephs</string>
    <string name="st_michaels_roscommon">St Michaels</string>
    <string name="st_ronans_roscommon">St Ronans</string>
    <string name="strokestown_roscommon">Strokestown</string>
    <string name="tulsk_roscommon">Tulsk</string>
    <string name="western_gaels_roscommon">Western Gaels</string>
    <string name="allen_gaels_leitrim">Allen Gaels</string>
    <string name="annaduff_leitrim">Annaduff</string>
    <string name="aughavas_leitrim">Aughavas</string>
    <string name="aughawillan_leitrim">Aughawillan</string>
    <string name="aughnasheelin_leitrim">Aughnasheelin</string>
    <string name="ballinaglera_leitrim">Ballinaglera</string>
    <string name="bornacoola_leitrim">Bornacoola</string>
    <string name="carrigallen_leitrim">Carrigallen</string>
    <string name="cloone_leitrim">Cloone</string>
    <string name="drumkeerin_leitrim">Drumkeerin</string>
    <string name="drumreilly_leitrim">Drumreilly</string>
    <string name="eslin_leitrim">Eslin</string>
    <string name="fenagh_st_caillins_leitrim">Fenagh St Caillins</string>
    <string name="glencar_manorhamilton_leitrim">Glencar-Manorhamilton</string>
    <string name="glenfarne_kiltyclogher_leitrim">Glenfarne/Kiltyclogher</string>
    <string name="gortletteragh_leitrim">Gortletteragh</string>
    <string name="kiltubrid_leitrim">Kiltubrid</string>
    <string name="leitrim_gaels_leitrim">Leitrim Gaels</string>
    <string name="melvin_gaels_leitrim">Melvin Gaels</string>
    <string name="mohill_leitrim">Mohill</string>
    <string name="sean_o_heslins_leitrim">Sean O Heslins</string>
    <string name="st_marys_kiltoghert_leitrim">St Marys Kiltoghert</string>
    <string name="st_osnats_leitrim">St Osnats</string>
    <string name="st_patricks_dromahair_leitrim">St Patricks Dromahair</string>
    <string name="ballymote_sligo">Ballymote</string>
    <string name="bunninadden_sligo">Bunninadden</string>
    <string name="calry_st_josephs_sligo">Calry/St Josephs</string>
    <string name="castleconnor_sligo">Castleconnor</string>
    <string name="cloonacool_sligo">Cloonacool</string>
    <string name="coolaney_mullinabreena_sligo">Coolaney/Mullinabreena</string>
    <string name="coolera_strandhill_sligo">Coolera/Strandhill</string>
    <string name="curry_sligo">Curry</string>
    <string name="drumcliffe_rosses_point_sligo">Drumcliffe/Rosses Point</string>
    <string name="easkey_sligo">Easkey</string>
    <string name="eastern_harps_sligo">Eastern Harps</string>
    <string name="enniscrone_kilglass_sligo">Enniscrone/Kilglass</string>
    <string name="geevagh_sligo">Geevagh</string>
    <string name="owenmore_gaels_sligo">Owenmore Gaels</string>
    <string name="shamrock_gaels_sligo">Shamrock Gaels</string>
    <string name="st_farnans_sligo">St Farnans</string>
    <string name="st_johns_sligo">St Johns</string>
    <string name="st_marys_sligo">St Marys</string>
    <string name="st_michaels_sligo">St Michaels</string>
    <string name="st_molaise_gaels_sligo">St Molaise Gaels</string>
    <string name="st_patricks_sligo">St Patricks</string>
    <string name="tourlestrane_sligo">Tourlestrane</string>
    <string name="tubbercurry_sligo">Tubbercurry</string>
    <string name="achill_mayo">Achill</string>
    <string name="aghamore_mayo">Aghamore</string>
    <string name="ardagh_mayo">Ardagh</string>
    <string name="ardnaree_mayo">Ardnaree</string>
    <string name="balla_mayo">Balla</string>
    <string name="ballaghaderreen_mayo">Ballaghaderreen</string>
    <string name="ballina_mayo">Ballina</string>
    <string name="ballinrobe_mayo">Ballinrobe</string>
    <string name="ballintubber_mayo">Ballintubber</string>
    <string name="ballycastle_mayo">Ballycastle</string>
    <string name="ballycroy_mayo">Ballycroy</string>
    <string name="ballyhaunis_mayo">Ballyhaunis</string>
    <string name="belmullet_mayo">Belmullet</string>
    <string name="bohola_moy_davitts_mayo">Bohola Moy Davitts</string>
    <string name="bonniconlon_mayo">Bonniconlon</string>
    <string name="breaffy_mayo">Breaffy</string>
    <string name="burrishoole_mayo">Burrishoole</string>
    <string name="caiseal_gaels_mayo">Caiseal Gaels</string>
    <string name="castlebar_mitchels_mayo">Castlebar Mitchels</string>
    <string name="charlestown_sarsfields_mayo">Charlestown Sarsfields</string>
    <string name="cill_chomain_mayo">Cill Chomain</string>
    <string name="claremorris_mayo">Claremorris</string>
    <string name="crossmolina_mayo">Crossmolina</string>
    <string name="davitts_mayo">Davitts</string>
    <string name="eastern_gaels_mayo">Eastern Gaels</string>
    <string name="garrymore_mayo">Garrymore</string>
    <string name="hollymount_carramore_mayo">Hollymount Carramore</string>
    <string name="islandeady_mayo">Islandeady</string>
    <string name="kilfian_mayo">Kilfian</string>
    <string name="killala_mayo">Killala</string>
    <string name="kilmaine_mayo">Kilmaine</string>
    <string name="kilmeena_mayo">Kilmeena</string>
    <string name="kilmovee_shamrocks_mayo">Kilmovee Shamrocks</string>
    <string name="kiltane_mayo">Kiltane</string>
    <string name="kiltimagh_mayo">Kiltimagh</string>
    <string name="knockmore_mayo">Knockmore</string>
    <string name="lacken_mayo">Lacken</string>
    <string name="lahardane_mayo">Lahardane</string>
    <string name="louisburgh_mayo">Louisburgh</string>
    <string name="mayo_gaels_mayo">Mayo Gaels</string>
    <string name="moygownagh_mayo">Moygownagh</string>
    <string name="parke_mayo">Parke</string>
    <string name="shrule_glencorrib_mayo">Shrule Glencorrib</string>
    <string name="swinford_mayo">Swinford</string>
    <string name="the_neale_mayo">The Neale</string>
    <string name="tooreen_mayo">Tooreen</string>
    <string name="tourmakeady_mayo">Tourmakeady</string>
    <string name="westport_mayo">Westport</string>
    <string name="abbeyknockmoy_galway">Abbeyknockmoy</string>
    <string name="ahascragh_fohenagh_galway">Ahascragh-Fohenagh</string>
    <string name="an_spideal_galway">An Spideal</string>
    <string name="annaghdown_galway">Annaghdown</string>
    <string name="ardrahan_galway">Ardrahan</string>
    <string name="athenry_galway">Athenry</string>
    <string name="ballinasloe_galway">Ballinasloe</string>
    <string name="ballinderreen_galway">Ballinderreen</string>
    <string name="ballygar_galway">Ballygar</string>
</resources>