<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="com.team15app.team15.MainActivity">

    <item
        android:id="@+id/menu_item_load"
        android:title="@string/action_load"
        android:icon="@drawable/ic_menu_load"
        app:showAsAction="never"/>

    <item
        android:id="@+id/menu_item_save"
        android:title="@string/action_save"
        android:icon="@drawable/ic_menu_save"
        app:showAsAction="always"/>

    <item
        android:id="@+id/menu_item_share"
        android:title="@string/share"
        android:icon="@drawable/ic_menu_share"
        app:showAsAction="always"/>

    <item
        android:id="@+id/menu_item_reset"
        android:title="@string/action_reset"
        android:icon="@drawable/ic_menu_delete"
        app:showAsAction="never"/>

    <item
        android:id="@+id/menu_item_about"
        android:title="@string/action_about"
        app:showAsAction="never"/>
</menu>
