<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/fab_margin">

    <LinearLayout
            android:id="@+id/ll_match_info_write"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent">

        <TextView
                android:id="@+id/tv_team_a"
                android:text="@string/default_team_name_a"
                android:textSize="@dimen/font_match_info"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"/>

        <EditText
                android:id="@+id/et_team_a"
                android:hint="@string/default_team_name_a"
                android:textSize="@dimen/font_size_large"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"/>

        <android.support.v4.widget.Space
                android:layout_width="wrap_content"
                android:layout_height="15dp"/>

        <TextView
                android:id="@+id/tv_team_b"
                android:text="@string/default_team_name_b"
                android:textSize="@dimen/font_match_info"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"/>

        <EditText
                android:id="@+id/et_team_b"
                android:hint="@string/default_team_name_b"
                android:textSize="@dimen/font_size_large"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"/>

        <android.support.v4.widget.Space
                android:layout_width="wrap_content"
                android:layout_height="15dp"/>

        <TextView
                android:id="@+id/tv_match_info"
                android:text="@string/default_match_title"
                android:textSize="@dimen/font_match_info"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"/>

        <include
            android:id="@+id/rl_match_info_write"
            layout="@layout/match_info_write"/>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>